Fixing treeview collapse/expand; adding type icons.

--- a/public/main.css
+++ b/public/main.css
@@ -83,18 +83,55 @@ main {
     list-style: square inside;
     text-align: left;
     padding-left: 10px;
+    overflow: hidden;
 }
 
 #tree .accordionControl {
     cursor: pointer;
 }
 
-#tree li:not(.expanded) {
-    height: 0;
-    transition: all 0.3s ease;
+#tree li {
+    position: relative;
+    overflow: hidden;
+    transition: all 0.5s ease;
 }
 
-#tree li.expanded {
-    height: auto;
+#tree li > ul {
+    max-height: 0;
+    transition: all 0.5s ease;
 }
 
+/* Default Icon */
+#tree li:before {
+    content: '🗎';
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#tree li[data-child-type="CANVAS"]:before {
+    content: '🖉';
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#tree li[data-child-type="RECTANGLE"]:before {
+    content: '▭';
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#tree li[data-child-type="GROUP"]:before {
+    content: '⌸';
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#tree li[data-child-type="FRAME"]:before {
+    content: '🖽';
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#tree ul {
+    list-style-type: none;
+}
